# controller/comment.go
@@ -3,17 +3,18 @@ package controller
 import (
 	"net/http"
 
+	"github.com/RaymondCode/simple-demo/model"
 	"github.com/gin-gonic/gin"
 )
 
 type CommentListResponse struct {
-	Response
+	Response    model.Response
 	CommentList []Comment `json:"comment_list,omitempty"`
 }
 
 type CommentActionResponse struct {
-	Response
-	Comment Comment `json:"comment,omitempty"`
+	Response model.Response
+	Comment  Comment `json:"comment,omitempty"`
 }
 
 // CommentAction no practical effect, just check if token is valid
@@ -24,7 +25,7 @@ func CommentAction(c *gin.Context) {
 	if user, exist := usersLoginInfo[token]; exist {
 		if actionType == "1" {
 			text := c.Query("comment_text")
-			c.JSON(http.StatusOK, CommentActionResponse{Response: Response{StatusCode: 0},
+			c.JSON(http.StatusOK, CommentActionResponse{Response: model.Response{StatusCode: 0},
 				Comment: Comment{
 					Id:         1,
 					User:       user,
@@ -33,16 +34,16 @@ func CommentAction(c *gin.Context) {
 				}})
 			return
 		}
-		c.JSON(http.StatusOK, Response{StatusCode: 0})
+		c.JSON(http.StatusOK, model.Response{StatusCode: 0})
 	} else {
-		c.JSON(http.StatusOK, Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
+		c.JSON(http.StatusOK, model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
 	}
 }
 
 // CommentList all videos have same demo comment list
 func CommentList(c *gin.Context) {
 	c.JSON(http.StatusOK, CommentListResponse{
-		Response:    Response{StatusCode: 0},
+		Response:    model.Response{StatusCode: 0},
 		CommentList: DemoComments,
 	})
 }
