# controller/common.go
@@ -1,9 +1,9 @@
 package controller
 
-type Response struct {
-	StatusCode int32  `json:"status_code"`
-	StatusMsg  string `json:"status_msg,omitempty"`
-}
+// type Response struct {
+// 	StatusCode int32  `json:"status_code"`
+// 	StatusMsg  string `json:"status_msg,omitempty"`
+// }
 
 type Video struct {
 	Id            int64  `json:"id,omitempty"`
