# controller/message.go
@@ -2,11 +2,13 @@ package controller
 
 import (
 	"fmt"
-	"github.com/gin-gonic/gin"
 	"net/http"
 	"strconv"
 	"sync/atomic"
 	"time"
+
+	"github.com/RaymondCode/simple-demo/model"
+	"github.com/gin-gonic/gin"
 )
 
 var tempChat = map[string][]Message{}
@@ -14,7 +16,7 @@ var tempChat = map[string][]Message{}
 var messageIdSequence = int64(1)
 
 type ChatResponse struct {
-	Response
+	Response    model.Response
 	MessageList []Message `json:"message_list"`
 }
 
@@ -40,9 +42,9 @@ func MessageAction(c *gin.Context) {
 		} else {
 			tempChat[chatKey] = []Message{curMessage}
 		}
-		c.JSON(http.StatusOK, Response{StatusCode: 0})
+		c.JSON(http.StatusOK, model.Response{StatusCode: 0})
 	} else {
-		c.JSON(http.StatusOK, Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
+		c.JSON(http.StatusOK, model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
 	}
 }
 
@@ -55,9 +57,9 @@ func MessageChat(c *gin.Context) {
 		userIdB, _ := strconv.Atoi(toUserId)
 		chatKey := genChatKey(user.Id, int64(userIdB))
 
-		c.JSON(http.StatusOK, ChatResponse{Response: Response{StatusCode: 0}, MessageList: tempChat[chatKey]})
+		c.JSON(http.StatusOK, ChatResponse{Response: model.Response{StatusCode: 0}, MessageList: tempChat[chatKey]})
 	} else {
-		c.JSON(http.StatusOK, Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
+		c.JSON(http.StatusOK, model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"})
 	}
 }
 
