# controller/user.go
@@ -1,9 +1,11 @@
 package controller
 
 import (
-	"github.com/gin-gonic/gin"
 	"net/http"
-	"sync/atomic"
+
+	"github.com/RaymondCode/simple-demo/model"
+	"github.com/RaymondCode/simple-demo/service"
+	"github.com/gin-gonic/gin"
 )
 
 // usersLoginInfo use map to store user info, and key is username+password for demo
@@ -19,61 +21,69 @@ var usersLoginInfo = map[string]User{
 	},
 }
 
-var userIdSequence = int64(1)
-
 type UserLoginResponse struct {
-	Response
-	UserId int64  `json:"user_id,omitempty"`
-	Token  string `json:"token"`
+	Response      model.Response
+	UserLoginData *service.UserLoginData
+	// UserId int64  `json:"user_id,omitempty"`
+	// Token  string `json:"token"`
 }
 
 type UserResponse struct {
-	Response
-	User User `json:"user"`
+	Response model.Response
+	User     User `json:"user"`
 }
 
+// Register 用户注册
+// @Summary 用户注册
+// @Description 用户注册，需要判断用户名是否已经被注册了，以及用户密码是否规范
+// @Tags 用户
+// @Accept application/json
+// @Produce application/json
+// @Param username query string true "账号"
+// @Param password query string true "密码"
+// @Success 200 {object} UserLoginResponse
+// @Router /douyin/user/register/ [post]
 func Register(c *gin.Context) {
 	username := c.Query("username")
 	password := c.Query("password")
-
 	token := username + password
+
+	userLoginData, err := service.UserLogin{}.Register(username, password)
+	if err != nil {
+		c.JSON(http.StatusOK, UserLoginResponse{
+			Response: model.Response{StatusCode: 1, StatusMsg: err.Error()},
+		})
+		return
+	}
 
 	if _, exist := usersLoginInfo[token]; exist {
 		c.JSON(http.StatusOK, UserLoginResponse{
-			Response: Response{StatusCode: 1, StatusMsg: "User already exist"},
+			Response: model.Response{StatusCode: 1, StatusMsg: "User already exist"},
 		})
 	} else {
-		atomic.AddInt64(&userIdSequence, 1)
-		newUser := User{
-			Id:   userIdSequence,
-			Name: username,
-		}
-		usersLoginInfo[token] = newUser
 		c.JSON(http.StatusOK, UserLoginResponse{
-			Response: Response{StatusCode: 0},
-			UserId:   userIdSequence,
-			Token:    username + password,
+			Response:      model.Response{StatusCode: 0, StatusMsg: "注册成功"},
+			UserLoginData: userLoginData,
 		})
 	}
 }
 
 func Login(c *gin.Context) {
-	username := c.Query("username")
-	password := c.Query("password")
+	// username := c.Query("username")
+	// password := c.Query("password")
 
-	token := username + password
+	// token := username + password
 
-	if user, exist := usersLoginInfo[token]; exist {
-		c.JSON(http.StatusOK, UserLoginResponse{
-			Response: Response{StatusCode: 0},
-			UserId:   user.Id,
-			Token:    token,
-		})
-	} else {
-		c.JSON(http.StatusOK, UserLoginResponse{
-			Response: Response{StatusCode: 1, StatusMsg: "User doesn't exist"},
-		})
-	}
+	// // if user, exist := usersLoginInfo[token]; exist {
+	// // 	c.JSON(http.StatusOK, UserLoginResponse{
+	// // 		Response:      model.Response{StatusCode: 0},
+	// // 		UserLoginData: &service.UserLogin{},
+	// // 	})
+	// // } else {
+	// // 	c.JSON(http.StatusOK, UserLoginResponse{
+	// // 		Response: model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"},
+	// // 	})
+	// // }
 }
 
 func UserInfo(c *gin.Context) {
@@ -81,12 +91,12 @@ func UserInfo(c *gin.Context) {
 
 	if user, exist := usersLoginInfo[token]; exist {
 		c.JSON(http.StatusOK, UserResponse{
-			Response: Response{StatusCode: 0},
+			Response: model.Response{StatusCode: 0},
 			User:     user,
 		})
 	} else {
 		c.JSON(http.StatusOK, UserResponse{
-			Response: Response{StatusCode: 1, StatusMsg: "User doesn't exist"},
+			Response: model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"},
 		})
 	}
 }
